update background #app. added height to main. fixed contacts overflow. added hover on active contact

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,10 @@
 #app {
   height: 100vh;
   width: 100%;
-  background: linear-gradient(180deg, #009688 18%, #d8dbd5 18%);
+  background: linear-gradient(180deg, #009688 12%, #d8dbd5 12%);
+}
+main {
+    height: 100%;
 }
 #contactList {
   width: 40%;
@@ -42,11 +45,15 @@
   /* padding: 5px; */
 }
 .contacts {
-  height: calc(100% - 90px);
+  height: calc(100% - 166px);
+  background-color: white;
+  overflow-y: auto;
 }
-/* .contact{
-
-} */
+/* .contact{   } */
+.active:hover {
+  background-color: grey;
+  cursor: pointer;
+}
 .avatar {
   width: 40px;
 }
